deploy app correção

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://uismalopes.github.io/portfolio",
+  "homepage": "https://uismalopes.github.io/portfolio/",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
