--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
     "@types/node": "^12.0.0",
     "bootstrap": "^4.5.0",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.0.1",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
-    "typescript": "~3.7.2"
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -45,6 +44,7 @@
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
-    "gh-pages": "^3.0.0"
+    "gh-pages": "^3.0.0",
+    "typescript": "^4.3.4"
   }
 }
